--- a/tips/UI按钮的点击缩放与锚点/说明.md
+++ b/tips/UI按钮的点击缩放与锚点/说明.md
@@ -1,3 +1,44 @@
 # UI编辑器中  `按钮`  的  `点击缩放`  与  `锚点`  的关系  
 ## 提交日期：`20210714`  
 
+在Uni编辑器的UI  *（User Interface的缩写，意思是：用户界面）*  编辑器中，  
+
+  `按钮`  控件的  **节点逻辑属性**  中，有  `点击缩放`  属性。  
+
+![图1 点击缩放属性](https://github.com/HeveraletLaidCenx/OnmyojiArenaUniAssis/blob/de4462990147c485682e4c89744bb92ce4020d3d/tips/UI%E6%8C%89%E9%92%AE%E7%9A%84%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE%E4%B8%8E%E9%94%9A%E7%82%B9/%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE.png)  
+图1 点击缩放属性  
+
+这个属性会让  `按钮`  在被玩家  `点击`  时，产生对应的缩放。  
+
+> 合理地设置这个属性的值，可以  **大幅提高玩家UI的交互体验**  。  
+
+如果将屏幕看成笛卡尔平面直角坐标系中的XY平面，而垂直于屏幕的方向看做空间笛卡尔坐标系的Z轴，则  
+设置了合适的  `点击缩放`  属性的  `按钮`  ，在被  `点击`  时，  
+可以在视觉上产生在Z轴上运动的感觉，给玩家一种  **按钮被按下**  的视觉反馈。  
+
+**但是需要注意的是**，这个缩放行为与  `按钮`  控件的  **节点定位属性** 中的  `锚点`  设置有关。  
+
+从结果来看，  **缩放会向锚点设置的方向偏移**  。  
+
+当  `锚点`  设置为  **中心**  时，  
+
+![图2-1 锚点设置为中心](https://github.com/HeveraletLaidCenx/OnmyojiArenaUniAssis/blob/de4462990147c485682e4c89744bb92ce4020d3d/tips/UI%E6%8C%89%E9%92%AE%E7%9A%84%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE%E4%B8%8E%E9%94%9A%E7%82%B9/%E6%8C%89%E9%92%AE%E4%B8%AD%E5%BF%83%E9%94%9A%E7%82%B9.png)  
+图2-1 锚点设置为中心  
+
+点击按钮时，可以看到  **正常的缩放**  。  
+
+![图2-2 正常缩放动画](https://github.com/HeveraletLaidCenx/OnmyojiArenaUniAssis/blob/de4462990147c485682e4c89744bb92ce4020d3d/tips/UI%E6%8C%89%E9%92%AE%E7%9A%84%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE%E4%B8%8E%E9%94%9A%E7%82%B9/%E6%8C%89%E9%92%AE%E4%B8%AD%E5%BF%83%E9%94%9A%E7%82%B9.gif)  
+图2-2 正常缩放动画  
+
+而当  `锚点`  设置为  **除中心以外的其他位置**  时（如左上），  
+
+![图3-1 锚点设置为左上](https://github.com/HeveraletLaidCenx/OnmyojiArenaUniAssis/blob/de4462990147c485682e4c89744bb92ce4020d3d/tips/UI%E6%8C%89%E9%92%AE%E7%9A%84%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE%E4%B8%8E%E9%94%9A%E7%82%B9/%E6%8C%89%E9%92%AE%E5%B7%A6%E4%B8%8A%E9%94%9A%E7%82%B9.png)  
+图3-1 锚点设置为左上  
+
+点击按钮，发现  **按钮的缩放向锚点方向偏移**  。  
+
+![图3-2 缩放向左上偏移动画](https://github.com/HeveraletLaidCenx/OnmyojiArenaUniAssis/blob/de4462990147c485682e4c89744bb92ce4020d3d/tips/UI%E6%8C%89%E9%92%AE%E7%9A%84%E7%82%B9%E5%87%BB%E7%BC%A9%E6%94%BE%E4%B8%8E%E9%94%9A%E7%82%B9/%E6%8C%89%E9%92%AE%E5%B7%A6%E4%B8%8A%E9%94%9A%E7%82%B9.gif)  
+图3-2 缩放向左上偏移动画  
+
+> 建议：一般情况下，为了保证交互体验，建议作者将  `按钮`  控件的  `锚点`  设置为  **中心** 。  
+> 但是通过合理设置点击缩放的值和锚点，说不定也能组合做出意想不到的效果）
